--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ spring.application.name=Products
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ESTORE
 spring.datasource.username=root
-spring.datasource.password=redeemerntumy4019
+spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
